Fixed font overflow when half page

--- a/style.css
+++ b/style.css
@@ -19,11 +19,13 @@ html {
 header {
 	display: flex;
 	height: 10vh;
-	background-image: linear-gradient(
+	/* background-image: linear-gradient(
 		to bottom right,
 		var(--primary),
 		var(--secondary)
-	);
+    ); */
+    background-color: rgb(0, 0, 0);
+
 	width: 100%;
 	margin: auto;
 	align-items: center;
@@ -31,7 +33,8 @@ header {
 
 .big-website-name {
 	margin: 10%;
-	font-size: 4vw;
+    font-size: 3vw;
+    font-family: 
 }
 
 .logo-container,
@@ -41,7 +44,7 @@ header {
 
 .logo-container {
 	padding-left: 1;
-	color: black;
+	color: rgb(255, 255, 255);
 	flex: 1;
 }
 
@@ -55,7 +58,7 @@ nav {
 }
 
 .nav-link {
-	color: #5f5f79;
+	color: #ffffff97;       /* #5f5f79 */
 	font-size: 1.8rem;
 	text-decoration: none;
 	padding: 12px;
@@ -196,11 +199,7 @@ main {
 /* ========================================================================== */
 
 footer {
-	background-image: linear-gradient(
-		to bottom right,
-		var(--primary),
-		var(--secondary)
-	);
+	background: black;
 	bottom: 0;
 	padding-bottom: 0px;
 	position: absolute;
@@ -248,7 +247,7 @@ footer {
 	opacity: 50%;
 }
 .social-menu ul li:nth-child(2) a:hover {
-	background-color: #55acee;
+	background-color: #83acff;
 	opacity: 50%;
 }
 .social-menu ul li:nth-child(3) a:hover {
@@ -261,8 +260,33 @@ footer {
 	width: 4rem;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 768px) { /* 768 */
 	.box-title {
 		font-size: 3rem;
-	}
+    }
+    .card__face--front h2 {
+        text-align: center;
+        color: #fff;
+        font-size: 2.5rem;
+        padding: 10%;
+    }
+    .section-desc {
+        font-size: 2vw;
+    }
+}
+
+@media (max-width: 700px) { /* 768 */
+	.box-title {
+		font-size: 3rem;
+    }
+    .card__face--front h2 {
+        text-align: center;
+        color: #fff;
+        font-size: 2rem;
+        padding: 10%;
+    }
+
+    .section-desc {
+        font-size: 2vw;
+    }
 }
